# counterparty-exposure-collateral-analytics

./: .gitignore  CLAUDE.md  PROJECT_DOSSIER.md  README-prov.md  README.md  pyproject.toml  runbook.md
.github/workflows/: tests.yml
dashboard/: __init__.py  app.py  utils.py
docs/: project_spec.md
meta/: conventions.md  initial_claude_msg.txt  project_spec.md  readme_buider_claude_prompt.md
src/collateral_analytics/: __init__.py
src/collateral_analytics/engines/: __init__.py  base.py  concentration.py  coverage.py  eligibility.py  exposure.py  haircut.py  monitoring.py  reporting.py  stress.py
src/collateral_analytics/loaders/: __init__.py  base.py  csv_loaders.py  data_manager.py
src/collateral_analytics/models/: __init__.py  collateral.py  concentration.py  counterparty.py  coverage.py  eligibility.py  exposure.py  haircut.py  haircut_assessment.py  monitoring.py  reports.py  results.py  security.py  stress.py
src/collateral_analytics/sample_data/: __init__.py  generator.py
src/collateral_analytics/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  test_concentration.py  test_coverage.py  test_data_manager.py  test_eligibility.py  test_exposure.py  test_haircut.py  test_loaders.py  test_models.py  test_monitoring.py  test_reporting.py  test_sample_data.py  test_stress.py
